--- a/report.css
+++ b/report.css
@@ -28,8 +28,8 @@ table.paleGrayRows tr:nth-child(even) {
 }
 
 table.paleGrayRows thead th {
-  background: #0B6FA4;
-  color: #FFFFFF;
+  background: #ffc217; /* 0B6FA4;*/
+  color: #000000;
   border-bottom: 1px solid #000000;
 }
 
@@ -45,47 +45,50 @@ table.paleGrayRows thead th:first-child {
   border-left: none;
 }
 
-table.paleGrayRows tbody tr:nth-last-child(1) {
-  font-size: 13px;
-  font-weight: normal;
-  color: #333333;
-  background: #DFE0DF;
-  border-top: 2px solid #444444;
-}
+/* table.paleGrayRows tbody tr:nth-last-child(1) { */
+/*   font-size: 13px; */
+/*   font-weight: normal; */
+/*   color: #333333; */
+/*   background: #DFE0DF; */
+/*   border-top: 2px solid #444444; */
+/* } */
 
 table.paleGrayRows tfoot td th {
   font-size: 1em;
 }
 
-table.paleGrayRows td:nth-last-child(1) {
-  font-size: 13px;
-  font-weight: normal;
-  color: #333333;
-  background: #DFE0DF;
-  border-left: 2px solid #444444;
-}
+/* table.paleGrayRows td:nth-last-child(1) { */
+/*   font-size: 13px; */
+/*   font-weight: normal; */
+/*   color: #333333; */
+/*   background: #DFE0DF; */
+/*   border-left: 2px solid #444444; */
+/* } */
 
 /*
 Page styling
 ================================== */
 @import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,700);
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Titillium+Web&display=swap');
 html { 
     height: 100%;
     background-color: #EEE; 
 }
+
 body {
     box-sizing: border-box;
     min-height: 100%;
     margin: 0 auto;
     padding: 2em;
     max-width: 800px;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
+    /* font-family: 'Josefin Sans', sans-serif;*/
     font-size: 1.em;
     background-color: white;
     /* border: double 3px #DDD; */
     /* border-top: none; border-bottom: none; */
 }
-h1, h2, h3, h4, h5, h6 { margin-top: 0; }
+h1, h2, h3, h4, h5, h6 { margin-top: 0; font-family: 'Roboto', sans-serif; }
 h3 { font-size: 1.2em; }
 h4 { font-size: 1em; }
 small { font-size: 0.750em; }
